--- a/frontend/src/app/user-details/user-details.component.html
+++ b/frontend/src/app/user-details/user-details.component.html
@@ -1,6 +1,34 @@
-<h2>User: </h2>
+<div class="container" *ngIf="currentUser; else loggedOut">
+  <header class="jumbotron">
+    <h3>
+      <strong>{{ currentUser.name }}</strong> Profile
+      <img src="assets/default-profile-icon.png" height="70" width="70" style="margin-left: auto;">
+    </h3>
+  </header>
+  <div class="plain-row">
+    <p>
+        <strong>Email:</strong>
+        {{ currentUser.email }}
+    </p>
+    <!-- TODO: implement functions and restrictions in frontend for disabling and deleting users along with a "are you sure?" confirmation prompt for when deleting users -->
+    <button class="btn-size margin-left-of margin-slightly-right-of">Disable User {{ '"' + currentUser.name + '"' }}</button>
+    <button class="btn-size">Delete User {{ '"' + currentUser.name + '"' }}</button>
+  </div>
+  <strong>Roles:</strong>
+  <ul>
+    <li>
+      {{ currentUser.roles }}
+    </li>
+  </ul>
+</div>
+
+  <ng-template #loggedOut>
+    Please login.
+  </ng-template>
 <hr>
 <h4>Posts:</h4>
+<hr>
+<h4></h4>
 
 <!-- <a *ngFor="let userPost of userPosts" routerLink="posts/{{ userPost.id }}">
     <div>
