--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -12,7 +12,7 @@
         <a class="nav-link" routerLink="mod">Moderator Board</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" *ngIf="isLoggedIn" routerLink="users/{{ user?.name }}">User</a>
+        <a class="nav-link" *ngIf="isLoggedIn" routerLink="user">User</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" *ngIf="isLoggedIn" routerLink="post-creation">Create post</a>
