--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -1,20 +1,22 @@
 <div class="container" *ngIf="currentUser; else loggedOut">
-  <header class="jumbotron">
-    <h3>
-      <strong>{{ currentUser.name }}</strong> Profile
-    </h3>
-  </header>
-  <p>
-    <strong>Email:</strong>
-    {{ currentUser.email }}
-  </p>
-  <strong>Roles:</strong>
-  <ul>
-    <li *ngFor="let role of currentUser.roles">
-      {{ role }}
-    </li>
-  </ul>
-</div>
+    <header class="jumbotron">
+      <h3>
+        <strong>{{ currentUser.name }}</strong> Profile
+      </h3>
+    </header>
+    <p>
+      <strong>Email:</strong>
+      {{ currentUser.email }}
+    </p>
+    <strong>Roles:</strong>
+    <ul>
+      <ng-container *ngIf="currentUser?.roles_info">
+        <li *ngFor="let role of currentUser.roles_info">
+          {{  role.name }}
+        </li>
+      </ng-container>
+    </ul>
+  </div>
 
   <ng-template #loggedOut>
     Please login.
