frontend: Added display of user's name and role on login

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -108,7 +108,7 @@
       </form>
 
       <div class="alert alert-success" *ngIf="isLoggedIn">
-        Logged in as {{ roles }}.
+        Logged in as {{ currentUser?.name }}<span *ngFor="let role of currentUser?.roles_info"> [{{role.name}}]</span>.
       </div>
     </div>
   </div>
