--- a/frontend/src/app/post/post.component.css
+++ b/frontend/src/app/post/post.component.css
@@ -45,6 +45,9 @@ h2, h4 {
     display: flex;
     flex-direction: row;
 }
+.flex-content-to-the-left {
+    justify-content: start;
+}
 .flex-content-to-the-right {
     justify-content: end;
 }
@@ -89,4 +92,8 @@ button {
 
 .hidden {
     display: none;
+}
+
+.role {
+    margin-left: 5px;
 }
