frontend: Implemented functionality to view user details and make admin, disable or delete an account

--- a/frontend/src/app/user-details/user-details.component.css
+++ b/frontend/src/app/user-details/user-details.component.css
@@ -11,6 +11,9 @@ body {
     display: flex;
     flex-direction: row;
 }
+.margin-above {
+    margin-top: auto;
+}
 .margin-left-of {
     margin-left: auto;
 }
