frontend: reroute appropriately on register + many smaller style-related changes

--- a/frontend/src/app/post-list/post-list.component.css
+++ b/frontend/src/app/post-list/post-list.component.css
@@ -19,3 +19,8 @@ a:hover {
     text-decoration: none;
     color: rgb(0, 0, 255);
 }
+
+.plain-row {
+    display: flex;
+    flex-direction: row;
+}
