--- a/frontend/src/app/post-creation/post-creation.component.html
+++ b/frontend/src/app/post-creation/post-creation.component.html
@@ -1,3 +1,6 @@
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"> </script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"> </script>
+
 <h2>Post creation</h2>
 
 <div class="plain-row">
