--- a/frontend/src/app/user-details/user-details.component.html
+++ b/frontend/src/app/user-details/user-details.component.html
@@ -24,7 +24,7 @@
     </div>
     <p>
     <strong>Account created at:</strong>
-    {{ user?.created_at }}
+    {{ user?.created_at_formatted }}
     </p>
     <strong>Roles:</strong>
     <ul>
