--- a/frontend/src/app/post-creation/post-creation.component.css
+++ b/frontend/src/app/post-creation/post-creation.component.css
@@ -19,8 +19,18 @@ label {
     display: flex;
     flex-direction: row;
 }
-.plain-row > .plain-row > label {
+.attachmentLabel {
     font-size: 1rem;
+}
+.fileLabel {
+    position: absolute;
+    top: 4rem;
+    right: 7rem;
+}
+
+.plain-column {
+    display: flex;
+    flex-direction: column;
 }
 
 input[type="file"] {
@@ -29,4 +39,65 @@ input[type="file"] {
 #btn-browse-images {
     height: fit-content;
     font-size: 0.8rem;
+    margin-left: 0.5rem;
+}
+
+.hidden {
+    display: none;
+}
+
+button {
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    transition: color 0.3s ease-out;
+}
+#btn-submit-post {
+    color: rgb(232, 230, 227);
+    border-color: rgba(44, 41, 212, 0.5);
+    background-color: rgb(24, 26, 27);
+}
+button:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: -1;
+    opacity: 1;
+    transition: opacity 0.3s ease-out;
+}
+#btn-submit:after {
+    background-image: linear-gradient(0deg, rgba(24, 26, 27, 0.13) 0%, rgba(40, 8, 185, 0.541) 100%);
+}
+button:before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 0.3s ease-out;
+}
+#btn-submit:before {
+    background-image: linear-gradient(180deg, rgba(24, 26, 27, 0.13) 0%, rgba(0, 13, 202, 0.541) 100%);
+}
+button:hover:before, button:focus::before {
+    opacity: 1;
+}
+button:hover:after, button:focus:after {
+    opacity: 0;
+}
+
+button:hover, button:focus {
+    color: rgb(255, 255, 255);
+    background-image: unset;
+    transition: opacity 0.3s ease-out;
+}
+
+#btn-submit:active {
+    background-image: linear-gradient(60deg, rgba(24, 26, 27, 0.13) 0%, rgba(49, 0, 163, 0.541) 100%);
 }
