--- a/frontend/src/app/post/post.component.html
+++ b/frontend/src/app/post/post.component.html
@@ -45,6 +45,10 @@
         <h3>Loading Post...</h3>
     </ng-template>
 
+    <!-- <div class="alert alert-warning" *ngIf="currentUser ? '' : 'hidden'">
+        You cannot submit any likes or dislikes without logging in. <a routerLink="../../register">Sign Up?</a>
+        Or if you already have an account, <a routerLink="../../login">Login?</a>
+    </div> -->
 
     <hr>
     <h4>Comment Section</h4>
@@ -67,11 +71,15 @@
             <p>{{ postComment?.content }}</p>
             <div class="plain-row flex-content-to-the-right margin-below">
                 <div class="likes {{ postComment?.opinion === 'liked' ? 'active' : '' }}">
-                    <button (click)="likeComment(postComment)"><span>{{ postComment?.likes }}</span> Like</button>
+                    <span>{{ postComment?.likes }}</span><button class="" (click)="likeComment(postComment)"> <img src="assets/like-&-dislike-light-theme-icon.png" class="default-like-icon">
+                                                                                                              <img src="assets/like-hover-icon.png" class="hover-like-icon">
+                                                                                                              <img src="assets/liked-icon.png" class="submitted-like-icon"></button>
                 </div>
                 <div class="dislikes {{ postComment?.opinion === 'disliked' ? 'active' : '' }}">
-                    <button (click)="dislikeComment(postComment)"><span>{{ postComment?.dislikes }}</span>
-                        Dislike</button>
+                    <span>{{ postComment?.dislikes }}</span><button class="" (click)="dislikeComment(postComment)">
+                        <img src="assets/like-&-dislike-light-theme-icon.png" class="default-dislike-icon">
+                        <img src="assets/dislike-hover-icon.png" class="hover-dislike-icon">
+                        <img src="assets/disliked-icon.png" class="submitted-dislike-icon"></button>
                 </div>
             </div>
         </ng-container>
