--- a/frontend/src/app/post/post.component.css
+++ b/frontend/src/app/post/post.component.css
@@ -14,7 +14,16 @@ section p {
     margin-bottom: 0;
 }
 
+:focus {
+    outline: none;
+}
 .likes, .dislikes {
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    transition: color 0.3s ease-out;
+
+    transition: 0.3s;
     border: none;
     border-style: solid;
     border-top-style: none;
@@ -28,7 +37,10 @@ section p {
     background: none;
     border: none;
 }
-.hover-like-icon, .submitted-like-icon, .hover-dislike-icon, .submitted-dislike-icon {
+.post-like-or-dislike-layout .likes, .post-like-or-dislike-layout .dislikes {
+    border-top-style: solid;
+}
+/* .hover-like-icon, .submitted-like-icon, .hover-dislike-icon, .submitted-dislike-icon {
     position: absolute;
     top: 0;
     left: 0;
@@ -36,13 +48,42 @@ section p {
 }
 .likes .default-like-icon:hover {
     opacity: 1;
+} */
+
+.likes:before, .dislikes:before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 0.3s ease-out;
 }
-.likes.active button {
-    background-color: rgba(0, 0, 255, 0.6);
-    color: white;
+.likes:before {
+    background-image: linear-gradient(0deg, rgba(24, 26, 27, 0.13) 0%, rgba(0, 47, 255, 0.441) 100%);
 }
-.dislikes.active button {
-    background-color:rgba(255, 0, 0, 0.6)
+.dislikes:before {
+    background-image: linear-gradient(180deg, rgba(24, 26, 27, 0.13) 0%, rgba(201, 0, 0, 0.441) 100%);
+}
+
+.likes:hover:before, .dislikes:hover:before {
+    opacity: 1;
+}
+
+.likes:active {
+    background-image: linear-gradient(60deg, rgba(24, 26, 27, 0.13) 0%, rgba(0, 217, 255, 0.441) 100%);
+}
+.dislikes:active {
+    background-image: linear-gradient(60deg, rgba(24, 26, 27, 0.13) 0%, rgba(255, 0, 0, 0.441) 100%);
+}
+
+.likes.active {
+    background-color: rgba(0, 17, 255, 0.55);
+}
+.dislikes.active {
+    background-color:rgba(255, 0, 0, 0.7)
 }
 
 .likes > span, .dislikes > span {
@@ -96,6 +137,9 @@ section {
 
 form button {
     width: 100%;
+}
+#btn-submit-post-comment {
+    margin-top: 2vh;
 }
 
 .btn-edit {
